Skip to content

Audio Compressor, Simple Mode

I don't mind taking my time for adjusting an audio compressor, but that's what I've gone to school for. But for a regular movie watcher without experience on signal processing, it is currently a near impossible task. I strongly think the compressor should be made as simple to use as possible.

I would suggest two modes for the compressor. An "Advanced" checkbox would show the current adjustments, and unchecking the box would show a very simple compressor that would serve most users a lot better. The simple mode would have only one slider for the compression amount, that would adjust the threshold and make-up gain simultaneously. Peak/RMS, Ratio and (soft) Knee could be fixed values, while attack and release would be automatic based on the audio material. Perhaps one or two checkboxes for the compressor behavior. For example fast/slow (or music/movie).

There are several marvellous simple compressor plugins as VST plugins, the free DC1A being one of my favourites. In my understanding for example musicdsp.org has open source code that could be used.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information