Compressor: change the defaults

0.2 of RMS/Peak, 4.0:1 of ratio and 5.0 of knee

ref #16079